--- a/composer.json
+++ b/composer.json
@@ -10,16 +10,18 @@
     }
   ],
   "require": {
-    "php": ">=5.5",
-    "bigwhoop/crc24": "~1.0@stable"
+    "php": "^8",
+    "bigwhoop/crc24": "^2"
   },
   "require-dev": {
-    "codeception/codeception": "2.0.7",
-    "codeception/specify": "0.4.1"
+    "phpunit/phpunit": "^9.5",
+    "phpstan/phpstan": "^1.2",
+    "phpstan/phpstan-phpunit": "^1.0"
   },
   "autoload": {  
     "psr-4": {
-      "Bigwhoop\\Radix64\\": "src/"
+      "Bigwhoop\\Radix64\\": "src/",
+      "Bigwhoop\\Radix64\\Tests\\": "tests/"
     }
   }
 }
